# ffpb

./: .appveyor.yml  README.md  ffrich.py  setup.cfg
.github/workflows/: python-publish.yml
