[metadata]
name = ffrich
version = 0.1.0
author = banksio
author-email = nathantb3@gmail.com
home-page = https://github.com/banksio/ffrich
description = A simple progress bar for ffmpeg, written in Python using rich
long-description = file: README.md
license = MIT
license-file = COPYING
platform = any
keywords = ffmpeg, ffmpeg-command, progress-bar, python-script, cli
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  License :: OSI Approved :: MIT License
  Operating System :: Unix
  Programming Language :: Python
  Programming Language :: Python :: 2.7
  Programming Language :: Python :: 3.3
  Programming Language :: Python :: 3.4
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Topic :: Multimedia :: Video :: Conversion
project_urls =
  Bug Tracker = https://github.com/banksio/ffrich/issues
  Changelog = https://github.com/banksio/ffrich/blob/master/CHANGELOG.md

[options]
zip_safe = true
include_package_data = false
python_requires = >= 2.7, != 3.0.*, != 3.1.*, != 3.2.*
py_modules = ffrich
test_suite = tests
setup_require =
  setuptools >=39.2
install_requires =
  rich ~=11.2.0

[options.entry_points]
console_scripts =
  ffrich = ffrich:main

[bdist_wheel]
universal = true

[aliases]
test = green

[coverage:report]
show_missing = true
exclude_lines =
        pragma: no cover
        @abc.abstractmethod
        @abc.abstractproperty
        raise NotImplementedError
        return NotImplemented

[nosetests]
verbosity = 2
with-coverage = true
cover-xml = true
cover-package = ffrich
with-doctest = true
doctest-extension = .rst
rednose = true

[green]
file-pattern = test_*.py
verbose = 2
no-skip-report = true
quiet-stdout = true
run-coverage = true
processes = 1

[pydocstyle]
inherit = false
ignore = D100,D200,D203,D213,D406,D407
match-dir = (?!tests)[^\.].*
